@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "2.6.12"
+  VERSION = "2.6.13"
 end
